added the content for the profile page

--- a/app/assets/css/student.css
+++ b/app/assets/css/student.css
@@ -26,3 +26,9 @@ img.logo {
 .infotech-img {
     height: 90px
 }
+
+
+/* Dashboard Styles */
+.dashboard-navbar {
+    background: #38b6ff !important;
+}
