--- a/app/assets/css/student.css
+++ b/app/assets/css/student.css
@@ -64,7 +64,7 @@ input.profile-info-right-input {
 }
 
 .course-body {
-    min-height: 100vh;
+    min-height: 90vh;
     background: #b7c9e2;
 }
 
@@ -72,7 +72,7 @@ input.profile-info-right-input {
     border-top: 1.5px solid black
 }
 
-.course-container {
+.course-content {
     background: #ff9743;
     border-radius: 5px !important
 }
