added the logout in the dropdown

--- a/app/assets/css/student.css
+++ b/app/assets/css/student.css
@@ -93,3 +93,7 @@ input.profile-info-right-input {
 .course-list-button-container {
     background: #f17233;
 }
+
+.profile-user-icon {
+    cursor:pointer
+}
