--- a/app/assets/css/admin_panel/styles.css
+++ b/app/assets/css/admin_panel/styles.css
@@ -182,3 +182,36 @@ a {
         padding-left: calc(var(--nav-width) + 188px)
     }
 }
+
+.component-container {
+    background: #b7c9e2;
+}
+
+.card {
+    height: 165px !important
+}
+
+.sub-admin-card {
+    background: #c1ff72 !important;
+}
+
+.registered-card {
+    background: #ff5757 !important
+}
+
+.registrant-card {
+    background: #38b6ff !important
+}
+
+.instructor-card {
+    background: #e8f063 !important;
+}
+
+.class-card {
+    background: #76c2af !important;
+}
+
+.sub-admin-card:hover, .registered-card:hover, .registrant-card:hover, .instructor-card:hover, .class-card:hover {
+    transform: scale(1.025);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
