--- a/app/assets/css/admin_panel/styles.css
+++ b/app/assets/css/admin_panel/styles.css
@@ -185,10 +185,11 @@ a {
 
 .component-container {
     background: #b7c9e2;
+    min-height:100vh !important
 }
 
 .card {
-    height: 165px !important
+    height: 140px !important
 }
 
 .sub-admin-card {
@@ -215,3 +216,23 @@ a {
     transform: scale(1.025);
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #131212 !important;
+    text-align: left;
+    padding: 8px;
+  }
+
+  th, td {
+    background:white !important
+  }
+  
+  tr:nth-child(even) {
+    background-color: #ecf1ed;
+  }
